feat(products): add action policy and claim lifecycle rules
Implemented ProductActionPolicy to centralize frontend-facing action permissions.

This change introduces a read-only policy layer that determines which
actions the current user can perform on a product based on:
- product status
- user role
- ownership and collector relationship

Added support for product claim and unclaim lifecycle with:
- explicit authorization checks (who can act)
- domain rules validation (when the action is allowed)
- consistent HTTP semantics and i18n error handling

Integrated presenter layer to enrich product responses with
action flags without coupling domain logic to controllers.

This improves maintainability, frontend integration, and
enforces a clear separation between authorization, rules, and state changes.